--- a/works/explore.ipynb
+++ b/works/explore.ipynb
@@ -6,6 +6,591 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_com_original = pd.read_csv(\"https://github.com/SubhanAhsan/ds_ibm_capstone/raw/master/data/dubai_com_geo.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>gid</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>description</th>\n",
+       "      <th>CNAME_E</th>\n",
+       "      <th>OBJECTID</th>\n",
+       "      <th>LABEL_E</th>\n",
+       "      <th>C_PREFIX_E</th>\n",
+       "      <th>C_PREFIX_A</th>\n",
+       "      <th>COMMUNITY_</th>\n",
+       "      <th>DGIS_ID</th>\n",
+       "      <th>COMM_NUM</th>\n",
+       "      <th>NDGIS_ID</th>\n",
+       "      <th>SHAPE_AREA</th>\n",
+       "      <th>SHAPE_LEN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>55.238901</td>\n",
+       "      <td>24.696762</td>\n",
+       "      <td>2</td>\n",
+       "      <td>kml_2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HEFAIR</td>\n",
+       "      <td>24</td>\n",
+       "      <td>HEFAIR</td>\n",
+       "      <td>Community:</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HEFAIR - 991</td>\n",
+       "      <td>227</td>\n",
+       "      <td>991</td>\n",
+       "      <td>227</td>\n",
+       "      <td>1.435665e+08</td>\n",
+       "      <td>51721.211180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>55.351739</td>\n",
+       "      <td>25.075185</td>\n",
+       "      <td>6</td>\n",
+       "      <td>kml_6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>WADI AL SAFA 5</td>\n",
+       "      <td>28</td>\n",
+       "      <td>WADI AL SAFA 5</td>\n",
+       "      <td>Community:</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>WADI AL SAFA 5 - 648</td>\n",
+       "      <td>228</td>\n",
+       "      <td>648</td>\n",
+       "      <td>228</td>\n",
+       "      <td>1.631967e+07</td>\n",
+       "      <td>22350.662760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>55.381360</td>\n",
+       "      <td>24.870378</td>\n",
+       "      <td>16</td>\n",
+       "      <td>kml_16</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SAIH AL SALAM</td>\n",
+       "      <td>38</td>\n",
+       "      <td>SAIH AL SALAM</td>\n",
+       "      <td>Community:</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SAIH AL SALAM - 951</td>\n",
+       "      <td>217</td>\n",
+       "      <td>951</td>\n",
+       "      <td>217</td>\n",
+       "      <td>8.869042e+07</td>\n",
+       "      <td>42842.713290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>55.543516</td>\n",
+       "      <td>25.239984</td>\n",
+       "      <td>127</td>\n",
+       "      <td>kml_127</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>AL TTAY</td>\n",
+       "      <td>149</td>\n",
+       "      <td>AL TTAY</td>\n",
+       "      <td>Community:</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>AL TTAY - 284</td>\n",
+       "      <td>55</td>\n",
+       "      <td>284</td>\n",
+       "      <td>55</td>\n",
+       "      <td>3.294484e+06</td>\n",
+       "      <td>12793.454780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>55.336311</td>\n",
+       "      <td>25.268667</td>\n",
+       "      <td>21</td>\n",
+       "      <td>kml_21</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>AL KHABAISI</td>\n",
+       "      <td>43</td>\n",
+       "      <td>AL KHABAISI</td>\n",
+       "      <td>Community:</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>AL KHABAISI - 128</td>\n",
+       "      <td>30</td>\n",
+       "      <td>128</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1.226749e+06</td>\n",
+       "      <td>5559.091719</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           X          Y  gid     Name  description         CNAME_E  OBJECTID  \\\n",
+       "0  55.238901  24.696762    2    kml_2          NaN          HEFAIR        24   \n",
+       "1  55.351739  25.075185    6    kml_6          NaN  WADI AL SAFA 5        28   \n",
+       "2  55.381360  24.870378   16   kml_16          NaN   SAIH AL SALAM        38   \n",
+       "3  55.543516  25.239984  127  kml_127          NaN         AL TTAY       149   \n",
+       "4  55.336311  25.268667   21   kml_21          NaN     AL KHABAISI        43   \n",
+       "\n",
+       "          LABEL_E  C_PREFIX_E  C_PREFIX_A            COMMUNITY_  DGIS_ID  \\\n",
+       "0          HEFAIR  Community:         NaN          HEFAIR - 991      227   \n",
+       "1  WADI AL SAFA 5  Community:         NaN  WADI AL SAFA 5 - 648      228   \n",
+       "2   SAIH AL SALAM  Community:         NaN   SAIH AL SALAM - 951      217   \n",
+       "3         AL TTAY  Community:         NaN         AL TTAY - 284       55   \n",
+       "4     AL KHABAISI  Community:         NaN     AL KHABAISI - 128       30   \n",
+       "\n",
+       "   COMM_NUM  NDGIS_ID    SHAPE_AREA     SHAPE_LEN  \n",
+       "0       991       227  1.435665e+08  51721.211180  \n",
+       "1       648       228  1.631967e+07  22350.662760  \n",
+       "2       951       217  8.869042e+07  42842.713290  \n",
+       "3       284        55  3.294484e+06  12793.454780  \n",
+       "4       128        30  1.226749e+06   5559.091719  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_com_original.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_com = df_com_original[[\"X\", \"Y\", \"gid\", \"CNAME_E\", \"COMMUNITY_\", \"COMM_NUM\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 226 entries, 0 to 225\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   X           226 non-null    float64\n",
+      " 1   Y           226 non-null    float64\n",
+      " 2   gid         226 non-null    int64  \n",
+      " 3   CNAME_E     226 non-null    object \n",
+      " 4   COMMUNITY_  226 non-null    object \n",
+      " 5   COMM_NUM    226 non-null    int64  \n",
+      "dtypes: float64(2), int64(2), object(2)\n",
+      "memory usage: 10.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_com.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>gid</th>\n",
+       "      <th>CNAME_E</th>\n",
+       "      <th>COMMUNITY_</th>\n",
+       "      <th>COMM_NUM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>55.238901</td>\n",
+       "      <td>24.696762</td>\n",
+       "      <td>2</td>\n",
+       "      <td>HEFAIR</td>\n",
+       "      <td>HEFAIR - 991</td>\n",
+       "      <td>991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>55.351739</td>\n",
+       "      <td>25.075185</td>\n",
+       "      <td>6</td>\n",
+       "      <td>WADI AL SAFA 5</td>\n",
+       "      <td>WADI AL SAFA 5 - 648</td>\n",
+       "      <td>648</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>55.381360</td>\n",
+       "      <td>24.870378</td>\n",
+       "      <td>16</td>\n",
+       "      <td>SAIH AL SALAM</td>\n",
+       "      <td>SAIH AL SALAM - 951</td>\n",
+       "      <td>951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>55.543516</td>\n",
+       "      <td>25.239984</td>\n",
+       "      <td>127</td>\n",
+       "      <td>AL TTAY</td>\n",
+       "      <td>AL TTAY - 284</td>\n",
+       "      <td>284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>55.336311</td>\n",
+       "      <td>25.268667</td>\n",
+       "      <td>21</td>\n",
+       "      <td>AL KHABAISI</td>\n",
+       "      <td>AL KHABAISI - 128</td>\n",
+       "      <td>128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>221</th>\n",
+       "      <td>55.177209</td>\n",
+       "      <td>25.060145</td>\n",
+       "      <td>222</td>\n",
+       "      <td>AL THANYAH  FOURTH</td>\n",
+       "      <td>AL THANYAH  FOURTH - 394</td>\n",
+       "      <td>394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>222</th>\n",
+       "      <td>55.375148</td>\n",
+       "      <td>25.153181</td>\n",
+       "      <td>223</td>\n",
+       "      <td>NADD AL SHIBA THIRD</td>\n",
+       "      <td>NADD AL SHIBA THIRD - 616</td>\n",
+       "      <td>616</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>223</th>\n",
+       "      <td>55.304043</td>\n",
+       "      <td>25.274348</td>\n",
+       "      <td>224</td>\n",
+       "      <td>AYAL NASIR</td>\n",
+       "      <td>AYAL NASIR - 116</td>\n",
+       "      <td>116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>224</th>\n",
+       "      <td>55.311262</td>\n",
+       "      <td>25.237983</td>\n",
+       "      <td>225</td>\n",
+       "      <td>OUD METHA</td>\n",
+       "      <td>OUD METHA - 319</td>\n",
+       "      <td>319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>225</th>\n",
+       "      <td>55.134069</td>\n",
+       "      <td>25.040448</td>\n",
+       "      <td>226</td>\n",
+       "      <td>JABAL ALI FIRST</td>\n",
+       "      <td>JABAL ALI FIRST - 591</td>\n",
+       "      <td>591</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>226 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             X          Y  gid              CNAME_E  \\\n",
+       "0    55.238901  24.696762    2               HEFAIR   \n",
+       "1    55.351739  25.075185    6       WADI AL SAFA 5   \n",
+       "2    55.381360  24.870378   16        SAIH AL SALAM   \n",
+       "3    55.543516  25.239984  127              AL TTAY   \n",
+       "4    55.336311  25.268667   21          AL KHABAISI   \n",
+       "..         ...        ...  ...                  ...   \n",
+       "221  55.177209  25.060145  222   AL THANYAH  FOURTH   \n",
+       "222  55.375148  25.153181  223  NADD AL SHIBA THIRD   \n",
+       "223  55.304043  25.274348  224           AYAL NASIR   \n",
+       "224  55.311262  25.237983  225            OUD METHA   \n",
+       "225  55.134069  25.040448  226      JABAL ALI FIRST   \n",
+       "\n",
+       "                    COMMUNITY_  COMM_NUM  \n",
+       "0                 HEFAIR - 991       991  \n",
+       "1         WADI AL SAFA 5 - 648       648  \n",
+       "2          SAIH AL SALAM - 951       951  \n",
+       "3                AL TTAY - 284       284  \n",
+       "4            AL KHABAISI - 128       128  \n",
+       "..                         ...       ...  \n",
+       "221   AL THANYAH  FOURTH - 394       394  \n",
+       "222  NADD AL SHIBA THIRD - 616       616  \n",
+       "223           AYAL NASIR - 116       116  \n",
+       "224            OUD METHA - 319       319  \n",
+       "225      JABAL ALI FIRST - 591       591  \n",
+       "\n",
+       "[226 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(226, 6)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_com.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "226"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_com[\"COMM_NUM\"].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>gid</th>\n",
+       "      <th>CNAME_E</th>\n",
+       "      <th>COMMUNITY_</th>\n",
+       "      <th>COMM_NUM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>226</td>\n",
+       "      <td>226</td>\n",
+       "      <td>226</td>\n",
+       "      <td>226</td>\n",
+       "      <td>226</td>\n",
+       "      <td>226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>226</td>\n",
+       "      <td>226</td>\n",
+       "      <td>226</td>\n",
+       "      <td>226</td>\n",
+       "      <td>226</td>\n",
+       "      <td>226</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            X      Y    gid CNAME_E COMMUNITY_ COMM_NUM\n",
+       "count     226    226    226     226        226      226\n",
+       "unique      1      1      1       1          1        1\n",
+       "top     False  False  False   False      False    False\n",
+       "freq      226    226    226     226        226      226"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_com.isna().describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    226.0\n",
+       "mean       3.0\n",
+       "std        0.0\n",
+       "min        3.0\n",
+       "25%        3.0\n",
+       "50%        3.0\n",
+       "75%        3.0\n",
+       "max        3.0\n",
+       "Name: COMM_NUM, dtype: float64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_com[\"COMM_NUM\"].apply(str).apply(len).describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
